Basic routing works

--- a/examples/service1/docker-compose.yml
+++ b/examples/service1/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: '3.5'
 
 services:
   service1:
@@ -7,10 +7,10 @@ services:
       dockerfile: Dockerfile
 
     labels:
-      - "baker.network=baker"
-      - "baker.service.port=8000"
-      - "baker.service.ping=/config"
-      - "baker.service.ssl=false"
+      - 'baker.network=baker_net'
+      - 'baker.service.port=8000'
+      - 'baker.service.ping=/config'
+      - 'baker.service.ssl=false'
 
     networks:
       - baker
