--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,23 @@
-version: "3.5"
+version: '3.5'
 
 services:
   service1:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: alinz/baker:1.0.0
+
+    environment:
+      - ACME=false
+      - ACME_PATH=/acme/cert
 
     ports:
-      - "80:80"
+      - '80:80'
+      - '443:443'
 
     networks:
       - baker
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./acme/cert:/acme/cert
 
 networks:
   baker:
