--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,12 @@ jobs:
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           DOCKER_SECRET: ${{ secrets.DOCKER_SECRET }}
         run: |
+          ANY_GO_FILES_CHANGED=`git diff-tree --no-commit-id --name-only -r HEAD | grep '.go'`
+          if [ -z $ANY_GO_FILES_CHANGED ]
+          then
+            exit
+          fi
+
           echo ${{ secrets.DOCKER_SECRET }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
           docker build -t alinz/baker:latest .
           docker push alinz/baker:latest
