--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         env:
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           DOCKER_SECRET: ${{ secrets.DOCKER_SECRET }}
+          GITHUB_DOCKER_SECRET: ${{ secrets.GITHUB_DOCKER_SECRET }}
         run: |
           docker build -t alinz/baker:latest .
 
@@ -29,5 +30,5 @@ jobs:
 
           # deploy to github package
           # echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.pkg.github.com -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker login docker.pkg.github.com --username alinz
+          echo ${{ secrets.GITHUB_DOCKER_SECRET }}docker login docker.pkg.github.com --username alinz --password-stdin
           docker push docker.pkg.github.com/alinz/baker/baker:latest
